--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -172,7 +172,9 @@ header.nav-active .header-nav-overlay {
         background-image: linear-gradient(to bottom, #9bce26, #9bce26);
     }
 
-
+    .list-util {
+        display: flex;
+    }
 
 
     .header-nav-overlay {
