--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -176,6 +176,12 @@ header.nav-active .header-nav-overlay {
         display: flex;
     }
 
+    .list-util .util-item .link .txt {
+        display: block;
+        font-size: .625rem;
+        color: #141414;
+    }
+
 
     .header-nav-overlay {
         display: none !important;
@@ -191,6 +197,7 @@ header.nav-active .header-nav-overlay {
     }
 
     .header-top {
+        display: flex;
         width: 1200px;
         margin: 0 auto;
     }
