--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -182,6 +182,11 @@ header.nav-active .header-nav-overlay {
         color: #141414;
     }
 
+    .list-util .util-item .link i {
+        width: 2rem;
+        height: 2rem;
+    }
+
 
     .header-nav-overlay {
         display: none !important;
