--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -11,19 +11,20 @@
           width="165"
       ></a>
     </div>
-
-    <form action="{{ routes.search_url }}">
-      <input
-        type="text"
-        placeholder="Search"
-        name="q"
-        value="{{ search.terms | escape }}"
-      >
-      <input type="hidden" name="type" value="product,page">
-      <input type="hidden" name="options[unavailable_products]" value="hide">
-      <input type="hidden" name="options[prefix]" value="last">
-      <input type="submit" value="Search">
-    </form>
+    <div class="search-area">
+      <form action="{{ routes.search_url }}">
+        <input
+          type="text"
+          placeholder="Search"
+          name="q"
+          value="{{ search.terms | escape }}"
+        >
+        <input type="hidden" name="type" value="product,page">
+        <input type="hidden" name="options[unavailable_products]" value="hide">
+        <input type="hidden" name="options[prefix]" value="last">
+        <input type="submit" value="Search">
+      </form>
+    </div>
 
     <button class="header-hamburger">
       <span class="line"></span>
