--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1,3 +1,32 @@
+.btn-init {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    background: transparent;
+}
+
+.search-area {
+    display: flex;
+    align-items: center;
+}
+
+.search-area .form-control {
+    border-top-right-radius: 0.375rem !important;
+    border-bottom-right-radius: 0.375rem !important;
+    font-size: 0.8125rem;
+}
+
+.search-area .form-control:focus {
+    background: transparent;
+}
+
+.search-area .btn-icon-search {
+    position: absolute;
+    padding: 4px 11px;
+    right: 0;
+    z-index: 20;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -172,14 +201,31 @@ header.nav-active .header-nav-overlay {
         background-image: linear-gradient(to bottom, #9bce26, #9bce26);
     }
 
+    .util-area {
+        display: flex;
+        align-items: center;
+    }
+
     .list-util {
         display: flex;
+        margin-bottom: 0;
+    }
+
+    .list-util .util-item {
+        width: 50px;
+    }
+
+    .list-util .util-item .link i svg {
+        width: 100%;
+        height: 32px;
+        color: #3e3e3e;
     }
 
     .list-util .util-item .link .txt {
         display: block;
         font-size: .625rem;
         color: #141414;
+        text-align: center;
     }
 
     .list-util .util-item .link i {
@@ -203,8 +249,13 @@ header.nav-active .header-nav-overlay {
 
     .header-top {
         display: flex;
+        justify-content: space-between;
         width: 1200px;
-        margin: 0 auto;
+        margin: 41px auto 28px;
+    }
+
+    .header-top .cus-col {
+        display: flex;
     }
 
     .header-bottom {
@@ -289,11 +340,11 @@ header.nav-active .header-nav-overlay {
 
 }
 
-.cate .wrap-gnb-container .wrap-gnb-inner-container .col:first-child {
+.cate .wrap-gnb-container .wrap-gnb-inner-container .cus-col:first-child {
     width: 400px;
 }
 
-.cate .wrap-gnb-container .wrap-gnb-inner-container .col:nth-child(2) {
+.cate .wrap-gnb-container .wrap-gnb-inner-container .cus-col:nth-child(2) {
     width: 200px;
 }
 
@@ -366,6 +417,15 @@ header.nav-active .header-nav-overlay {
     display: none;
 }
 
+.search-area .input-group {
+    width: 404px;
+}
+
+.search-area .input-group .input {
+    border: solid 1px #9bce26;
+    height: 36px;
+    padding-right: 45px;
+    margin: 0;
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
