--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -11,6 +11,7 @@
 
     {{ 'style.css' | asset_url | stylesheet_tag }}
     {{ 'footer.css' | asset_url | stylesheet_tag }}
+    {{ 'bootstrap.css' | asset_url | stylesheet_tag }}
   </head>
   <body>
     {% section 'header' %}
