--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -106,10 +106,14 @@
                 </div>
                 <div class="cus-col trend">
                   <div class="tit-trend-area">
-                    <h1 class="txt-tit">トレンドキーワード</h1>
+                    <h1 class="txt-tit">{{ section.settings.heading }}</h1>
                   </div>
                   <ul class="list-trend">
                     <li>{{ section.settings.trend_01 }}</li>
+                    <li>{{ section.settings.trend_02 }}</li>
+                    <li>{{ section.settings.trend_03 }}</li>
+                    <li>{{ section.settings.trend_04 }}</li>
+                    <li>{{ section.settings.trend_05 }}</li>
                   </ul>
                 </div>
                 <div class="cus-col banner">
@@ -238,13 +242,36 @@
       "id": "banner01",
       "label": "banner 01"
     },
-
+    {
+      "id": "headings",
+      "type": "text",
+      "label": "トレンドキーワード"
+    },
     {
       "id": "trend_01",
       "type": "text",
       "label": "kyword 01"
     },
-
+    {
+      "id": "trend_02",
+      "type": "text",
+      "label": "kyword 02"
+    },
+    {
+      "id": "trend_03",
+      "type": "text",
+      "label": "kyword 03"
+    },
+    {
+      "id": "trend_04",
+      "type": "text",
+      "label": "kyword 04"
+    },
+    {
+      "id": "trend_05",
+      "type": "text",
+      "label": "kyword 055"
+    },
     {
       "type": "text",
       "id": "banner01_link",
