--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -11,7 +11,6 @@
             width="{{ section.settings.logo_width }}"
         ></a>
       </div>
-
       <div class="search-area">
         <form action="{{ routes.search_url }}">
           <div class="input-group">
@@ -106,7 +105,7 @@
                 </div>
                 <div class="cus-col trend">
                   <div class="tit-trend-area">
-                    <h1 class="txt-tit">{{ section.settings.heading }}</h1>
+                    <h1 class="txt-tit">{{ section.settings.headings }}</h1>
                   </div>
                   <ul class="list-trend">
                     <li>{{ section.settings.trend_01 }}</li>
@@ -294,7 +293,6 @@
       "step": 4,
       "unit": "px"
     },
-
     {
       "type": "image_picker",
       "id": "banner02",
@@ -321,15 +319,6 @@
       "max": 200,
       "step": 4,
       "unit": "px"
-    },
-    {
-      "type": "range",
-      "id": "padding",
-      "label": "Header height",
-      "default": 24,
-      "min": 5,
-      "max": 100,
-      "step": 1
     },
     {
       "type": "link_list",
