--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -375,6 +375,7 @@ header.nav-active .header-nav-overlay {
     letter-spacing: 0;
     font-weight: 700;
     margin: 0;
+    text-decoration: none;
 }
 
 .cate .wrap-gnb-container.active {
@@ -420,6 +421,7 @@ header.nav-active .header-nav-overlay {
     letter-spacing: 0;
     font-weight: bold;
     margin: 0 10px;
+    text-decoration: none;
 }
 
 .header-hamburger {
