--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -82,7 +82,6 @@
                 <span class="line"></span>
                 <span class="line"></span>
               </span>
-
               <span class="txt-menu">カテゴリー</span>
             </button>
             <div class="wrap-gnb-container">
@@ -105,7 +104,9 @@
                 </div>
                 <div class="cus-col trend">
                   <div class="tit-trend-area">
-                    <h1 class="txt-tit">{{ section.settings.headings }}</h1>
+                    {% if section.settings.tit_trend != black %}
+                      <h1 class="txt-tit">{{ section.settings.tit_trend }}</h1>
+                    {% endif %}
                   </div>
                   <ul class="list-trend">
                     <li>{{ section.settings.trend_01 }}</li>
@@ -117,13 +118,16 @@
                 </div>
                 <div class="cus-col banner">
                   <a
+                    class="link"
                     hrf="{{section.settings.banner01_link}}"
                     style="display:block;max-width: min(100%, {{ section.settings.banner01_width }}px);"
                   >
                     <img loading="lazy" src="{{ section.settings.banner01 | img_url: 'master' }}" width="100%">
                     <p>{{ section.settings.banner01_title }}</p>
                   </a>
+
                   <a
+                    class="link"
                     hrf="{{section.settings.banner02_link}}"
                     style="display:block;max-width: min(100%, {{ section.settings.banner02_width }}px);"
                   >
@@ -242,8 +246,8 @@
       "label": "banner 01"
     },
     {
-      "id": "headings",
       "type": "text",
+      "id": "tit_trend",
       "label": "トレンドキーワード"
     },
     {
@@ -290,7 +294,7 @@
       "default": 200,
       "min": 50,
       "max": 200,
-      "step": 4,
+      "step": 10,
       "unit": "px"
     },
     {
@@ -317,7 +321,7 @@
       "default": 200,
       "min": 50,
       "max": 200,
-      "step": 4,
+      "step": 10,
       "unit": "px"
     },
     {
