--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -82,7 +82,9 @@
                 <span class="line"></span>
                 <span class="line"></span>
               </span>
-              <span class="txt-menu">カテゴリー</span>
+              <span class="txt-menu">
+                <span>カテゴリー</span>
+              </span>
             </button>
             <div class="wrap-gnb-container">
               <div class="wrap-gnb-inner-container">
@@ -234,7 +236,7 @@
       });
     });
   }
-  addClassOnHover(['.nav-item', '.cate-item', '.trend-item'], 'on');
+  addClassOnHover(['.nav-item', '.cate-item', '.trend-item', '.btn-cate'], 'on');
 
   hamburgerMenu();
   allCateMenu();
