--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -162,16 +162,27 @@ header.nav-active .header-nav-overlay {
 
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {}
+/* @media only screen and (max-width: 600px) {} */
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {}
+/* @media only screen and (min-width: 600px) {} */
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {}
+/* @media only screen and (min-width: 768px) {} */
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+    .wrap-list-nav-sub {
+        position: absolute;
+        left: 0;
+        width: 100%;
+    }
+
+    .wrap-list-nav-sub .list-nav-sub {
+        width: 1200px;
+        margin: 0 auto;
+        display: flex;
+    }
 
     .trend-item a,
     .cate-item a,
@@ -451,15 +462,10 @@ header.nav-active .header-nav-overlay {
     padding-left: 0;
 }
 
-.list-nav-sub {
-    position: absolute;
 
-
-
-}
 
 .list-nav .nav-item {
-    position: relative;
+
     margin-top: 0;
 }
 
