--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -166,14 +166,26 @@
                 <a class="link" href="{{link.url}}"
                   ><span>{{ link.title }}</span></a
                 >
+
                 {% if link.links != blank %}
-                  <ul class="list-nav-sub">
-                    {% for child in link.links %}
-                      <li class="nav-item-sub">
-                        <a href="{{child.url}}">{{ child.title }}</a>
-                      </li>
-                    {% endfor %}
-                  </ul>
+                  <div class="wrap-list-nav-sub">
+                    <ul class="list-nav-sub">
+                      {% for child in link.links %}
+                        <li class="nav-item-sub">
+                          <a href="{{child.url}}">{{ child.title }}</a>
+                          <ul>
+                            {% for child in link.links %}
+                              {% if link.links != blank %}
+                                <li>
+                                  <a href="{{child.url}}">{{ child.title }}</a>
+                                </li>
+                              {% endif %}
+                            {% endfor %}
+                          </ul>
+                        </li>
+                      {% endfor %}
+                    </ul>
+                  </div>
                 {% endif %}
               </li>
             {% endfor %}
